	**************************************************
	*						 *
	*	       0.65 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 0.65.1


NEW FEATURES

    o	New function commandArgs() to record the command-line used.

    o	New arguments `local' and `now' to dyn.load.

    o	diag(x) now keeps names when appropriate and barfs when x is an array.

    o	functions source.url, url.show, read.table.url, scan.url to read
	from an http server instead of a file.

    o	grid() gets useful defaults: grid lines drawn at tick marks.


BUG FIXES

    o	centering in text() will be more accurate, particularly on devices
	with full font metric information (postscript, x11, not windows).

    o	arguments after --no-readline in the Unix version were ignored.

    o	couldn't set attributes in hashed environments.

    o	[<-.data.frame mishandled dfr[1] <- 1 (forgotten drop=FALSE)

    o   sys.on.exit didn't work

    o   sys.parent didn't quite work either for n >= 2. 

    o   par("mfg") was wrong, par(mfg=) switched to down columns. Now
	par(mfrow/mfcol = c(nr, nc)) followed by par(mfg=c(i,j)) is 
	the preferred style.


		CHANGES IN R VERSION 0.65.0

NEW FEATURES

    o	A first step in improving performance has been made.
	Attached objects, libraries etc are now hashed; performance
	gains will be particularly apparent if large packages are in use.

    o	First version of package ts for time-series analysis.
	This has fairly complete S-PLUS compatibility, but more features
	are planned. See library(help=ts) for details.

    o	warnings can be collected (options(warn=0), the default), printed
	immediately (options(warn=1)) or turned into errors (options(warn=2)).
	As a consequence, all warnings and errors now are printed followed
	by a newline, if one is not supplied. (This should improve the
	S compatibility of the use of PROBLEM ... in compiled code.)



    o	All R environment variables are now of the form `R_xxx'.  In